--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,11 +36,11 @@
 
 
 .short-day-pick-selected {
-    background-color: rgb(0,136,238);
+    background-color: rgb(0, 136, 238);
     margin: 0;
     height: 56px;
     border-radius: 10px 10px 0 0;
-    border: solid 5px rgb(0,136,238);
+    border: solid 5px rgb(0, 136, 238);
 }
 
 .short-day-pick-selected h1 {
@@ -56,7 +56,8 @@
     white-space: nowrap;
     margin: auto;
 }
-/* 
+
+/*
 .short-picker-container > div {
     border: solid 1px;
   
@@ -73,7 +74,76 @@
 }
 
 
+.patient-container {
+    margin-bottom: 10px;
+    height: 100px;
+    width: 640px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.patient-selector {
+    background-color: rgb(0, 136, 238);
+    height: 102px;
+    width: 60px;
+    vertical-align: bottom;
+    text-align: center;
+    color: white;
+    padding-top: 1%;
+    border-radius: 10px 0 0 10px;
+}
+
+.patient-content {
+    width: 480px;
+    height: 102px;
+    display: inline-block;
+    vertical-align: bottom;
+    border: solid 1px;
+    cursor: pointer;
+}
+
+.patient {
+    width: 94px;
+    height: 88px;
+    display: inline-block;
+    vertical-align: bottom;
+    border: solid 3px;
+    cursor: pointer;
+    margin-bottom: 2px;
+}
+
+.patient-info {
+    display: inline-block;
+    width: 374px;
+    padding-left: 10px;
+}
+
+
+.patient-name {
+}
+
+
+.patient-id {
+    padding-top: 10px;
+    font-style: italic;
+    font-weight: normal;
+}
+
+.patient-icon {
+    color: black;
+    font-size: 70px;
+    position: relative;
+    top: calc(50% - 58px);
+}
+
+.untested {
+
+}
+
+.tested {
+    background: lightgreen;
+    text-align: center;
+}
 
 .tslot-container {
     margin-bottom: 10px;
@@ -82,7 +152,7 @@
 }
 
 .tslot-selector {
-    background-color: rgb(0,136,238);
+    background-color: rgb(0, 136, 238);
     height: 100%;
     width: 60px;
     vertical-align: bottom;
@@ -136,8 +206,12 @@
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .spinner-container {
