--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -150,7 +150,7 @@
 .tslot-container {
     margin-bottom: 10px;
     height: 60px;
-    width: 380px;
+    max-width: 380px;
 }
 
 .tslot-selector {
@@ -165,7 +165,7 @@
 }
 
 .tslot-content {
-    width: 300px;
+    /* width: 300px; */
     height: 100%;
     display: inline-block;
     vertical-align: bottom;
